--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "EventClock"]
 	path = EventClock
-	url = git@github.com:CrazySpy/EventClock.git
+	url = https://github.com/CrazySpy/EventClock.git
